2009-08-03  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::_expandInterface): See #284:
	PolicyCompiler::ExpandMultipleAddresses and
	NATCompiler::ExpandMultipleAddresses should include subinterfaces

2009-08-02  vadim  <vadim@vk.crocodile.org>

	* Interface.cpp (Interface::validateChild): DTD does not allow
	nested subinterfaces; only one level of subinterfaces is supported.
	Interface::validateChild() now checks for this condition.

2009-07-29  vadim  <vadim@vk.crocodile.org>

	* snmp.h (class SNMPCrawler): Removed obsolete parameter
	skip_virtual - we never ignore virtual addresses.

2009-07-28  vadim  <vadim@vk.crocodile.org>

	* Compiler_cluster.cpp (Compiler::populateClusterElements): while
	scanning interfaces-members of a failover group, use only those
	that are children of the firewall that we are compiling. fixes
	#242 "fwb_ipt generates duplicate automatic rules for heartbeat
	and other protocols"

2009-07-27  vadim  <vadim@vk.crocodile.org>

	* Cluster.cpp (Cluster::getMembersList): cluster group members can
	be references to interfaces and subinterfaces; this change adds
	support for subinterfaces.

2009-07-26  vadim  <vadim@vk.crocodile.org>

	* Compiler_cluster.cpp (Compiler::processFailoverGroup): While
	adding a copy of cluster interface to the firewall, make sure it
	has new unique ID instead of a copy of the ID of the cluster's
	interface object. If the ID is the same,
	RuleElementItf::validateChild() finds clusters' interface which is
	not a child of the firewall object and therefore is rejected.

2009-07-25  vadim  <vadim@vk.crocodile.org>

	* Compiler.h (fwcompiler): Deprecated object caching in compiler,
	fixes #228

	* Cluster.cpp (Cluster::getMembersList): need to scan not only
	StateSyncClusterGroup child objects but also all
	FailoverClusterGroup objects in order to find all member
	firewalls. The program used to look only at StateSyncClusterGroup
	objects, which meant it did not recognize any members if state